[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/Other/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/white1x1.png" type="Texture" id=2]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation3.png" type="Texture" id=3]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation5.png" type="Texture" id=4]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation6.png" type="Texture" id=5]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation7.png" type="Texture" id=6]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation8.png" type="Texture" id=7]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation9.png" type="Texture" id=8]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation2.png" type="Texture" id=9]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation1.png" type="Texture" id=10]
[ext_resource path="res://Assets/MainMenuStuff/pause_menu_animation4.png" type="Texture" id=11]
[ext_resource path="res://Assets/MainMenuStuff/help_button_1_hover.png" type="Texture" id=12]
[ext_resource path="res://Assets/MainMenuStuff/quit_button_1_hover.png" type="Texture" id=13]
[ext_resource path="res://Assets/MainMenuStuff/back_button_hover (1).png" type="Texture" id=14]
[ext_resource path="res://Assets/HelpMenu/help_menu.png" type="Texture" id=15]
[ext_resource path="res://Assets/HelpMenu/help_menu_2.png" type="Texture" id=16]
[ext_resource path="res://Assets/HelpMenu/help_menu_1.png" type="Texture" id=17]
[ext_resource path="res://Assets/HelpMenu/next_page_button_hover.png" type="Texture" id=18]
[ext_resource path="res://Assets/HelpMenu/back_button_v2_hover (1).png" type="Texture" id=19]
[ext_resource path="res://Music/Random/button_hover_1.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/MusicOnOff/music_button.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "an1",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "an2",
"speed": 5.0
} ]

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.376471 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
pause_mode = 2
position = Vector2( 960, 450 )
scale = Vector2( 6.6, 6.6 )
frames = SubResource( 1 )
frame = 8
playing = true

[node name="Buttons" type="Node2D" parent="."]

[node name="Help" type="Sprite" parent="Buttons"]
visible = false
position = Vector2( 960, 651 )
scale = Vector2( 6.6, 6.6 )
texture = ExtResource( 12 )

[node name="Quit" type="Sprite" parent="Buttons"]
visible = false
position = Vector2( 960, 816.5 )
scale = Vector2( 6.6, 6.6 )
texture = ExtResource( 13 )

[node name="Back" type="Sprite" parent="Buttons"]
visible = false
position = Vector2( 960, 450 )
scale = Vector2( 6.6, 6.6 )
texture = ExtResource( 14 )

[node name="MusicButton" type="Sprite" parent="Buttons"]
position = Vector2( 1833.04, 996.099 )
scale = Vector2( 6.6, 6.6 )
texture = ExtResource( 21 )

[node name="Help" type="Node2D" parent="."]
visible = false
position = Vector2( 960, 452 )
scale = Vector2( 6.6, 6.6 )

[node name="HelpMenu" type="Sprite" parent="Help"]
texture = ExtResource( 15 )

[node name="Controls" type="AnimatedSprite" parent="Help"]
position = Vector2( -26.5, 15 )
frames = SubResource( 2 )
animation = "an2"

[node name="GoLeft" type="Sprite" parent="Help"]
visible = false
position = Vector2( 38, 38 )
texture = ExtResource( 18 )

[node name="GoBack" type="Sprite" parent="Help"]
visible = false
position = Vector2( 52, 57 )
texture = ExtResource( 19 )

[node name="GoRight" type="Sprite" parent="Help"]
visible = false
position = Vector2( 66, 38 )
texture = ExtResource( 18 )
flip_h = true

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -10.0
